Fixed any error issues

--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,4 +1,5 @@
 meta_product_name: "Yarnlore"
-meta_title: "Yarnlore - Product tagline"
+meta_title: "Yarnlore - Crafting Dreams"
 meta_description: "Discover and track your favourite patterns"
 meta_image: "knitting.png"
+twitter_account: "@product_twitter_account"
